[package]
name = "data-version"
version = "0.1.0"
edition = "2021"

[dependencies]
dunce = "1.0.4"
file = "1.1.2"
fs = "0.0.5"
log = "0.4.22"
pathbuf = "1.0.0"
rocksdb = "0.22.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_derive = "1.0.188"
serde_json = "1.0.106"
time = { version = "0.3.20", features = ["serde"] }
toml = "0.8.17"
util = "0.1.3"
